# CATOpt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  final.py  test  todo  viz.py
include/: CAT.h  CatOpt.h  CirclePatterns.h  CircleWrapper.h  Common.h  EdgeLengthOptimization.h  EmbeddingOptimization.h  IntrinsicFlattening.h  PrescribeCurvature.h  Solver.h  triangle.h
meshes/: beanhole.ai  patch.ai
old/: CAT-Flattening-v1.cpp  CAT-Flattening-v2.cpp
src/: CirclePatterns.cpp  CircleWrapper.cpp  Common.cpp  EdgeLengthOptimization.cpp  EmbeddingOptimization.cpp  EmbeddingOptimizationEnergy.cpp  EmbeddingOptimizationSubdivision.cpp  IntrinsicFlattening.cpp  PrescribeCurvature.cpp  Solver.cpp  circleWrapper.cpp  embeddingOptimization.cpp  flatteningOptimization.cpp  intrinsicOptimization.cpp  main.cpp  patterns.cpp  temp.cpp
